--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio_TD</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <img src="imagens/Avatar.jpeg" alt="Foto pessoal" width="200">
         <p>Eu sou a professora Fernanda</p>
         <h1>Eu ensino programação</h1>
         <p>Moro em Cascavel, gosto de joga tenis. Sou licenciada em filosofia. E hoje sou professora de programação. Veja meus projetos.</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScritp</li>
-            <li>Python</li>
-        </ul>
+        
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScritp</span>
+            <span>Python</span>
+    
     </header>
-</body>>
+    <main>
+
+    </main>
+
+    <footer>
+        <h2>Entre em contato</h2>
+        <a href="https://github.com/Ferfkm?tab=repositories">GitHub</a>
+        <p>Produzido por Professora Fernanda</p>
+    </footer>
+</body>
 </html>
