--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <img src="imagens/Avatar.jpeg" alt="Foto pessoal" width="200">
         <p>Eu sou a professora Fernanda</p>
-        <h1>Eu ensino programação</h1>
+        <h1>Oi <b id="nome">Fulano</b>, Eu ensino programação</h1>
         <p>Moro em Cascavel, gosto de joga tenis. Sou licenciada em filosofia. E hoje sou professora de programação. Veja meus projetos.</p>
         
             <span>HTML</span>
@@ -48,5 +48,7 @@
         <a href="https://github.com/Ferfkm?tab=repositories">GitHub</a>
         <p>Produzido por Professora Fernanda</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
